--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,9 @@
 <%- include('partials/header')%>
-    <main>
-        <div id="home-page">
-            <p>Welcome to 2021 Perseverance Car Expo. Login or register below to browse the collection and
-                place a bid</p>
-            <a class="nav-links" href="/users/signin">Login</a>
-            <a class="nav-links" href="/users/new">Register</a>
-        </div>
-    </main>
-    <%- include('partials/footer')%>
+<main>
+	<div id="home-page">
+		<p>Please Login or Register to view our inventory</p>
+		<a class="nav-links" href="/users/signin">Login</a>
+		<a class="nav-links" href="/users/new">Register</a>
+	</div>
+</main>
+<%- include('partials/footer')%>
