--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <p>&copy; Created by Abdi Hussein</p>
+    <p>&copy; All Rights Reserved</p>
     <a target="_blank" href="https://github.com/abdi-hu/cars-expo">
         <img src="/imgs/github.png" alt="github-icon">
     </a>
