WIP passport google auth

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,6 +29,7 @@
 				<%} else {%>
 				<a class="nav-links" href="/users/signin">Login</a>
 				<%}%>
+				<a href="/auth/google">Login with Google</a>
 			</nav>
 			<h1><%=title%></h1>
 		</header>
