--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,9 +27,11 @@
 				<%if(loggedIn) {%>
 				<a class="nav-links" href="/users/logout">Logout</a>
 				<%} else {%>
-				<a class="nav-links" href="/users/signin">Login</a>
+				<a class="nav-links" href="/google"
+					><img src="/imgs/google.png" alt="" style="max-width: 30px" />
+					Login
+				</a>
 				<%}%>
-				<a href="/auth/google">Login with Google</a>
 			</nav>
 			<h1><%=title%></h1>
 		</header>
