--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Pattaya&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
 	--textShadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
 		-1px 1px 0 #000, 1px 1px 0 #000;
 	--primary: #4fc4cc;
 	--secondary: #dd516b;
 	--tertiary: #574fcc;
+	--headingFont: "Pattaya", sans-serif;
+	--primaryFont: "Roboto", sans-serif;
 }
 
 html,
@@ -13,11 +16,9 @@ body {
 	background-size: cover;
 	position: sticky;
 	background-repeat: no-repeat;
-	font-family: Arial, Helvetica, sans-serif;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	font-family: "Pattaya", sans-serif;
 }
 main {
 	flex: 1;
@@ -29,10 +30,12 @@ h1 {
 		-1px 1px 0 #000, 1px 1px 0 #000;
 	color: var(--primary);
 	text-align: center;
+	font-family: var(--headingFont);
 }
 h3,
 legend {
 	color: var(--secondary);
+	font-family: var(--headingFont);
 }
 nav {
 	height: 3.5rem;
@@ -43,6 +46,14 @@ nav {
 	font-size: 24px;
 	text-shadow: var(--textShadow);
 	color: var(--primary);
+}
+nav > div > img {
+	height: 4rem;
+	vertical-align: middle;
+	border-radius: 50%;
+	padding: 3px;
+	border: 1px solid #021a40;
+	background-color: var(--primary);
 }
 .nav-links {
 	display: inline;
@@ -210,5 +221,15 @@ caption {
 		color: white;
 		text-shadow: var(--textShadow);
 		align-self: center;
+	}
+	nav {
+		height: 3rem;
+		display: flex;
+		justify-content: space-around;
+		background-image: url("/imgs/banner.png");
+		align-items: center;
+		font-size: 16px;
+		text-shadow: var(--textShadow);
+		color: var(--primary);
 	}
 }
