--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,13 +18,14 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/" class="nav-links">
-					<img class="nav-image" src="/imgs/mustang.png" alt="home-icon" />
-					Home
-				</a>
+				<img class="nav-image" src="/imgs/mustang.png" alt="home-icon" id="home-icon"/>
+				<a href="/" class="nav-links" id="home">Expo</a>
 				<%if(loggedIn) {%>
 				<a class="nav-links" href="/cars">Inventory</a>
+				<%if(loggedIn.admin) {%>
+				<a class="nav-links" href="/bids">Bids</a>
 				<a class="nav-links" href="/cars/new">Add Car</a>
+				<%}%>
 				<div>
 					<img src="<%=loggedIn.avatar%>" alt="avatar" />
 					<a class="nav-links" href="/users/logout">Logout</a>
@@ -38,5 +39,4 @@
 			</nav>
 			<h1><%=title%></h1>
 		</header>
-	</body>
 </html>
